Solved some overflow issues
 - Audio list now scrolls on overflow instead of entire container
 - Mobile browser size still overflows entire container

--- a/softcut-ui/src/app/app.component.scss
+++ b/softcut-ui/src/app/app.component.scss
@@ -31,6 +31,7 @@
 }
 
 .content {
+    display: flex;
     overflow: auto;
     width: 100%;
     padding-left: 5%;
@@ -40,6 +41,7 @@
 @media only screen and (max-width: 600px) {
     .content {
         width: auto;
+        height: 100%;
         padding-left: 10px;
         padding-right: 10px;
     }
