--- a/softcut-ui/src/app/controls/footer/footer.component.scss
+++ b/softcut-ui/src/app/controls/footer/footer.component.scss
@@ -11,6 +11,12 @@
 	padding-left: 55px;
 }
 
+@media only screen and (max-width: 1090px) {
+	.footer {
+		padding-left: 20px;
+	}
+}
+
 @media only screen and (max-width: 600px) {
 	.footer {
 		position: relative;
